@@ -1,4 +1,8 @@
-Fri 09 lip 2004 17:39:43 CEST
+Sat 10 Jul 2004 15:51:07 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
+	o forEach(variable, list) function for internal loops
+	o for(variable, start, end, [step]) function for internal loops
+
+Fri 09 Jul 2004 17:39:43 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
 	o TreeWidget optimized - it should be much faster for big trees now
 	o fixed bug in TreeWidget findItem function
 
